# runtime

./: Directory.Build.props  README.md
eng/: Versions.props
eng/native/: build-commons.sh  configurecompiler.cmake  gen-buildsys.sh
eng/pipelines/: runtime-extra-platforms-other.yml  runtime.yml
eng/testing/: tests.singlefile.targets
src/coreclr/: Directory.Build.targets  build-runtime.cmd  build-runtime.sh  runtime.proj
src/coreclr/System.Private.CoreLib/: System.Private.CoreLib.csproj
src/coreclr/binder/: assemblybindercommon.cpp  customassemblybinder.cpp  defaultassemblybinder.cpp
src/coreclr/gc/: gc.cpp
src/coreclr/gcinfo/: gcinfoencoder.cpp
src/coreclr/inc/: clrconfigvalues.h  eetwain.h  gcinfodecoder.h  gcinfoencoder.h  gcinfotypes.h  jiteeversionguid.h  readytorun.h
src/coreclr/jit/: async.cpp  async.h  codegen.h  codegenarm.cpp  codegenarmarch.cpp  codegencommon.cpp  codegenlinear.cpp  codegenloongarch64.cpp  codegenriscv64.cpp  codegenxarch.cpp  emit.cpp  emit.h  emitarm.cpp  emitarm64.cpp  emitloongarch64.cpp  emitriscv64.cpp  emitxarch.cpp  emitxarch.h  gcencode.cpp  importer.cpp  importercalls.cpp  jitconfigvalues.h  jitgcinfo.h  targetamd64.h  targetarm64.h  targetx86.h
src/coreclr/src/libraries-native/: CMakeLists.txt
src/coreclr/tests/: issues.targets
src/coreclr/utilcode/: pedecoder.cpp
src/coreclr/vm/: CMakeLists.txt  appdomain.cpp  assemblynative.cpp  clsload.cpp  codeman.cpp  common.h  dacenumerablehash.inl  dllimport.cpp  ecalllist.h  eetwain.cpp  excep.cpp  finalizerthread.cpp  gccover.cpp  gcdecode.cpp  gcinfodecoder.cpp  genmeth.cpp  jitinterface.cpp  method.cpp  method.hpp  methodtable.cpp  methodtable.h  methodtablebuilder.cpp  methodtablebuilder.h  multicorejitimpl.h  nativeimage.cpp  peassembly.cpp  pefile.cpp  pefile.h  peimage.cpp  peimage.h  peimagelayout.cpp  peimagelayout.h  stubmgr.cpp  syncblk.cpp  syncblk.h  threads.cpp  threads.h  threadsuspend.cpp  yieldprocessornormalized.cpp
src/installer/corehost/: NativeLibsExportList  build.cmd  build.proj  (+2 more)
src/libraries/: tests.proj
src/tests/: build.sh  issues.targets
(+288 files in other folders)
